--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                     <a class="navbar-brand h2 text-uppercase text-white" href="#">Start Bootstrap</a>
                 </div>
                 <div>
-                    <div class="btn btn-outline-light btn-lg"><i class="fa-solid fa-bars"></i></div>
+                    <div class="btn btn-outline-light btn-lg d-lg-none d-xl-none"><i class="fa-solid fa-bars"></i></div>
+                    <div class="d-none d-lg-block d-xl-block">
+                        <ul class="list-group list-group-horizontal text-white list-unstyled gap-4">
+                            <li>link</li>
+                            <li>link</li>
+                            <li>link</li>
+                        </ul>
+                    </div> 
                 </div>
             </div>
         </nav>
