--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="page-header bg-blue pt-3 pb-3">
         <nav class="navbar navbar-expand-md">
-            <div class="container-fluid">
+            <div class="container">
                 <div>
                     <a class="navbar-brand h2 text-uppercase text-white" href="#">Start Bootstrap</a>
                 </div>
@@ -19,14 +19,35 @@
                     <div class="btn btn-outline-light btn-lg d-lg-none d-xl-none"><i class="fa-solid fa-bars"></i></div>
                     <div class="d-none d-lg-block d-xl-block">
                         <ul class="list-group list-group-horizontal text-white list-unstyled gap-4">
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
+                            <li> <a class="nav-link" href="#">link </a></li>
+                            <li> <a class="nav-link" href="#">link </a></li>
+                            <li> <a class="nav-link" href="#">link </a></li>
                         </ul>
                     </div> 
                 </div>
             </div>
         </nav>
     </header>
+    <main>
+        <section class="hero debug">
+            <div class="container">
+                <div class="row">
+                    <div class="col-10 offset-md-1"></div>
+                </div>
+            </div>
+        </section>
+        <section class="card-section debug">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
