--- a/index.html
+++ b/index.html
@@ -32,19 +32,31 @@
         <section class="hero debug">
             <div class="container">
                 <div class="row">
-                    <div class="col-10 offset-md-1"></div>
+                    <div class="col col-10 offset-1"></div>
                 </div>
             </div>
         </section>
         <section class="card-section debug">
             <div class="container">
                 <div class="row">
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4"></div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
+                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                        <div class="card"></div>
+                    </div>
                 </div>
             </div>
         </section>
