ADD- page layout in debug

--- a/index.html
+++ b/index.html
@@ -29,37 +29,75 @@
         </nav>
     </header>
     <main>
-        <section class="hero debug">
+        <section class="hero debug pt-4 pb-4 bg-green">
             <div class="container">
                 <div class="row">
                     <div class="col col-10 offset-1"></div>
                 </div>
             </div>
         </section>
-        <section class="card-section debug">
+        <section class="card-section pt-4 pb-4 debug">
             <div class="container">
+                <div class="row">Title</div>
                 <div class="row">
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-xs-12 col-sm-12 col-lg-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
                         <div class="card"></div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="about debug pt-4 pb-4 bg-green">
+            <div class="container">
+                <div class="row"> Title</div>
+                <div class="row">
+                    <div class="col col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
+                    <div class="col col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
+                </div>
+            </div>
+        </section>
+        <section class="contact debug pt-4 pb-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12"></div>
+                </div>
+            </div>
+        </section>
+        <section class="info debug bg-light-blue pt-3 pb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
+                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
+                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer debug bg-blue pt-3 pb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p class="text-center">Copyright</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
