FIX- general structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <div>
-                    <a class="navbar-brand h2 text-uppercase text-white" href="#">Start Bootstrap</a>
+                    <a class="h2 text-uppercase text-white text-decoration-none" href="#">Start Bootstrap</a>
                 </div>
                 <div>
                     <div class="btn btn-outline-light btn-lg d-lg-none d-xl-none"><i class="fa-solid fa-bars"></i></div>
@@ -32,30 +32,36 @@
         <section class="hero debug pt-4 pb-4 bg-green">
             <div class="container">
                 <div class="row">
-                    <div class="col col-10 offset-1"></div>
+                    <div class="col-12 d-flex justify-content-center">
+                        <div class="card"></div>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="card-section pt-4 pb-4 debug">
             <div class="container">
-                <div class="row">Title</div>
                 <div class="row">
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col-12">
+                        <h2 class="h2 text-center">Title</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center align-items-center">
+                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
                         <div class="card"></div>
                     </div>
                 </div>
@@ -63,20 +69,33 @@
         </section>
         <section class="about debug pt-4 pb-4 bg-green">
             <div class="container">
-                <div class="row"> Title</div>
                 <div class="row">
-                    <div class="col col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
-                    <div class="col col-sm-12 col-md-6 col-lg-6 col-xl-6"></div>
+                    <div class="col-12">
+                        <h2 class="h2 text-center">Title</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-10 col-md-5"></div>
+                    <div class="col-10 col-md-5"></div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <a class="btn">Download</a>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="contact debug pt-4 pb-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-12"></div>
+                    <div class="col-12">
+                        <h2 class="h2 text-center">Title</h2>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-12"></div>
+                <div class="row justify-content-center">
+                    <div class="col-10">
+                        <form class="form" action=""></form>
+                    </div>
                 </div>
             </div>
         </section>
