ADD- hero section completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <div>
-                    <a class="h2 text-uppercase text-white text-decoration-none" href="#">Start Bootstrap</a>
+                    <a class="h4 text-uppercase text-white text-decoration-none" href="#">Start Bootstrap</a>
                 </div>
                 <div>
                     <div class="btn btn-outline-light btn-lg d-lg-none d-xl-none"><i class="fa-solid fa-bars"></i></div>
@@ -29,11 +29,14 @@
         </nav>
     </header>
     <main>
-        <section class="hero debug pt-4 pb-4 bg-green">
+        <section class="hero pt-4 pb-4 bg-green">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-12 d-flex flex-column align-items-center">
+                        <img class="img-sized"src="./img/avatar.svg">
+                        <h2 class="h2 text-uppercase text-white">Start Bootstrap</h2>
+                        <div class="star d-flex justify-content-center align-items-center text-white"><i class="fa-solid fa-star"></i></div>
+                        <p class="p text-uppercase text-white">Graphic artist - Web Designer - Illustrator</p>
                     </div>
                 </div>
             </div>
