--- a/index.html
+++ b/index.html
@@ -34,38 +34,51 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center">
                         <img class="img-sized"src="./img/avatar.svg">
-                        <h2 class="h2 text-uppercase text-white">Start Bootstrap</h2>
+                        <h2 class=" h2 fs-1 text-uppercase text-white">Start Bootstrap</h2>
                         <div class="star d-flex justify-content-center align-items-center text-white"><i class="fa-solid fa-star"></i></div>
                         <p class="p text-uppercase text-white">Graphic artist - Web Designer - Illustrator</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="card-section pt-4 pb-4 debug">
+        <section class="card-section pt-4 pb-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="h2 text-center">Title</h2>
+                        <h4 class="h4 text-center text-uppercase">Portfolio</h4>
+                        <div class="star d-flex justify-content-center align-items-center"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                <div class="row row-gap-4">
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/cabin.png">
+                        </div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/cake.png">
+                        </div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/circus.png">
+                        </div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/game.png">
+                        </div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/safe.png">
+                        </div>
                     </div>
-                    <div class="col col-sm-12 col-md-6 col-xl-4 d-flex justify-content-center">
-                        <div class="card"></div>
+                    <div class="col-sm-12 col-md-6 col-xl-4">
+                        <div class="card">
+                            <img class="img-fluid rounded-3" src="./img/submarine.png">
+                        </div>
                     </div>
                 </div>
             </div>
