ADD- section about

--- a/index.html
+++ b/index.html
@@ -83,20 +83,25 @@
                 </div>
             </div>
         </section>
-        <section class="about debug pt-4 pb-4 bg-green">
+        <section class="about pt-4 pb-4 bg-green">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="h2 text-center">Title</h2>
+                        <h4 class="h4 text-center text-uppercase text-white">About</h4>
+                        <div class="star d-flex justify-content-center align-items-center text-white"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-10 col-md-5"></div>
-                    <div class="col-10 col-md-5"></div>
+                    <div class="col-10 col-md-5">
+                            <p class="p text-white lh-1 w-100">Freelancer is Lorem ipsum dolor sit amet consectetur adipi sicing elit. Rerum provid ent architecto minima, officiis sequi a praesentium commodi quia eaque, rem, natus sunt perferendis voluptatem beatae. </p>
+                    </div>
+                    <div class="col-10 col-md-5">
+                            <p class="p text-white lh-1 w-100"> Whether you're a Lorem ipsum dolor, sit amet consectetur adipi sicing elit. Corporis faci lis sit rem verita tis, atque laborum sapiente minus. Dolores, accusantium corrupti.</p>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
-                        <a class="btn">Download</a>
+                    <div class="col-12 d-flex justify-content-center">
+                        <a class="btn btn-outline-light"><span class="text-white fs-6 me-1"><i class="fa-solid fa-download"></i></span>Download</a>
                     </div>
                 </div>
             </div>
