ADD- contact section

--- a/index.html
+++ b/index.html
@@ -106,16 +106,22 @@
                 </div>
             </div>
         </section>
-        <section class="contact debug pt-4 pb-4">
+        <section class="contact pt-4 pb-4">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="h2 text-center">Title</h2>
+                        <h4 class="h4 text-center text-uppercase">Contact me</h4>
+                        <div class="star d-flex justify-content-center align-items-center"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-10">
-                        <form class="form" action=""></form>
+                        <form class="form" action="">
+                            <input class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="name" type="text" placeholder="Name">
+                            <input class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="email" type="email" placeholder="Email address">
+                            <input class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="phone-number" type="number" placeholder="Phone number">
+                            <textarea class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="message" rows="5" placeholder="Message"> </textarea>
+                        </form>
                     </div>
                 </div>
             </div>
