--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                             <input class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="email" type="email" placeholder="Email address">
                             <input class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="phone-number" type="number" placeholder="Phone number">
                             <textarea class="d-block border-end-0 border-start-0 border-top-0 w-100 pt-3 pb-3" name="message" rows="5" placeholder="Message"> </textarea>
+                            <input class="mt-3 bg-green border-0 rounded px-3 py-2 text-white" type="submit">
                         </form>
                     </div>
                 </div>
