--- a/index.html
+++ b/index.html
@@ -127,20 +127,34 @@
                 </div>
             </div>
         </section>
-        <section class="info debug bg-light-blue pt-3 pb-3">
+        <section class="info bg-light-blue pt-3 pb-3">
             <div class="container">
-                <div class="row">
-                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
-                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
-                    <div class="col col-sm-12 col-md-4 col-lg-4"></div>
+                <div class="row text-white">
+                    <div class="col col-sm-12 col-md-4 col-lg-4 text-center">
+                        <p class="text-uppercase fs-5 mb-1">Location</p>
+                        <p>215 bla bla bla bla</p>
+                    </div>
+                    <div class="col col-sm-12 col-md-4 col-lg-4 d-flex flex-column align-items-center">
+                        <p class="text-uppercase fs-5">Around the web</p>
+                        <div class="d-flex gap-4">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-google-plus"></i>
+                            <i class="fa-brands fa-twitter"></i>
+                            <i class="fa-brands fa-linkedin-in"></i>
+                        </div>
+                    </div>
+                    <div class="col col-sm-12 col-md-4 col-lg-4 text-center">
+                        <p class="text-uppercase fs-5 mb-1">About freelancer</p>
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, exercitationem!</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <footer class="footer debug bg-blue pt-3 pb-3">
+        <footer class="footer bg-blue pt-3 pb-3">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <p class="text-center">Copyright</p>
+                        <p class="text-center text-white fs-6">Copyright bla bla bla</p>
                     </div>
                 </div>
             </div>
