FIX- attempt to font-sizing

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="row">
                     <div class="col-12 d-flex flex-column align-items-center">
                         <img class="img-sized"src="./img/avatar.svg">
-                        <h2 class=" h2 fs-1 text-uppercase text-white">Start Bootstrap</h2>
+                        <h2 class=" h2 fs-1 text-uppercase text-white fw-bold">Start Bootstrap</h2>
                         <div class="star d-flex justify-content-center align-items-center text-white"><i class="fa-solid fa-star"></i></div>
                         <p class="p text-uppercase text-white">Graphic artist - Web Designer - Illustrator</p>
                     </div>
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h4 class="h4 text-center text-uppercase">Portfolio</h4>
+                        <h3 class="h3 text-center text-uppercase fw-semibold">Portfolio</h3>
                         <div class="star d-flex justify-content-center align-items-center"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h4 class="h4 text-center text-uppercase text-white">About</h4>
+                        <h4 class="h4 text-center text-uppercase text-white fw-semibold">About</h4>
                         <div class="star d-flex justify-content-center align-items-center text-white"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
@@ -110,7 +110,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h4 class="h4 text-center text-uppercase">Contact me</h4>
+                        <h4 class="h4 text-center text-uppercase fw-semibold">Contact me</h4>
                         <div class="star d-flex justify-content-center align-items-center"><i class="fa-solid fa-star"></i></div>
                     </div>
                 </div>
